--- a/2.2-Categorical.variable.plots/lesson.yaml
+++ b/2.2-Categorical.variable.plots/lesson.yaml
@@ -42,25 +42,25 @@
   Output: Let's consider now bargraphs with two categorical variables. Consider the variable Award, which represents which of three awards the student would like to win in their lifetime - an Academy Award, a Nobel Prize, or an Olympic Medal. 
 
 - Class: cmd_question
-  Output: Lets compare answers between Males and Females. We can greate a plot with a separate panel for Males and Females using a "|" - gf_bar(~Award|Gender, data=StudentSurvey). Try it!
-  CorrectAnswer: gf_bar(~Award|Gender, data=StudentSurvey)
-  AnswerTests: any_of_exprs('gf_bar(~Award|Gender, data=StudentSurvey)')
-  Hint: Enter gf_bar(~Award|Gender, data=StudentSurvey). This tells R that we want to break down the data by Gender. 
+  Output: Lets compare answers between Males and Females. We can greate a plot with a separate panel for Males and Females using a "|" - gf_bar(~Award|Sex, data=StudentSurvey). Try it!
+  CorrectAnswer: gf_bar(~Award|Sex, data=StudentSurvey)
+  AnswerTests: any_of_exprs('gf_bar(~Award|Sex, data=StudentSurvey)')
+  Hint: Enter gf_bar(~Award|Sex, data=StudentSurvey). This tells R that we want to break down the data by Sex. 
 
 - Class: text
   Output: Great job. We can also use the fill argument to gf_bar() to create stacked and side-by-side bargraphs.
 
 - Class: cmd_question
-  Output: Try the following gf_bar(~Award, fill=~Gender, data=StudentSurvey). This will create a stacked histogram.
-  CorrectAnswer: gf_bar(~Award, fill=~Gender, data=StudentSurvey)
-  AnswerTests: any_of_exprs('gf_bar(~Award, fill=~Gender, data=StudentSurvey)')
-  Hint: Enter gf_bar(~Award, fill=~Gender, data=StudentSurvey). This tells R that we want to break down the data by Gender. 
+  Output: Try the following gf_bar(~Award, fill=~Sex, data=StudentSurvey). This will create a stacked histogram.
+  CorrectAnswer: gf_bar(~Award, fill=~Sex, data=StudentSurvey)
+  AnswerTests: any_of_exprs('gf_bar(~Award, fill=~Sex, data=StudentSurvey)')
+  Hint: Enter gf_bar(~Award, fill=~Sex, data=StudentSurvey). This tells R that we want to break down the data by Sex. 
  
 - Class: cmd_question
-  Output: To create side-by-side histograms, we can add an extra argument, position=position_dodge(). This tells R to place the counts next to each other rather than on top of each other. Try it - enter  gf_bar(~Award, fill=~Gender, data=StudentSurvey, position=position_dodge()). 
-  CorrectAnswer: gf_bar(~Award, fill=~Gender, data=StudentSurvey, position=position_dodge())
-  AnswerTests: any_of_exprs('gf_bar(~Award, fill=~Gender, data=StudentSurvey, position=position_dodge())')
-  Hint: Enter gf_bar(~Award, fill=~Gender, data=StudentSurvey, position=position_dodge()). This tells R that we want to break down the data by Gender. 
+  Output: To create side-by-side histograms, we can add an extra argument, position=position_dodge(). This tells R to place the counts next to each other rather than on top of each other. Try it - enter  gf_bar(~Award, fill=~Sex, data=StudentSurvey, position=position_dodge()). 
+  CorrectAnswer: gf_bar(~Award, fill=~Sex, data=StudentSurvey, position=position_dodge())
+  AnswerTests: any_of_exprs('gf_bar(~Award, fill=~Sex, data=StudentSurvey, position=position_dodge())')
+  Hint: Enter gf_bar(~Award, fill=~Sex, data=StudentSurvey, position=position_dodge()). This tells R that we want to break down the data by Sex. 
 
   
 - Class: mult_question
