--- a/7.1-Normal.and.t.distribution/lesson.yaml
+++ b/7.1-Normal.and.t.distribution/lesson.yaml
@@ -49,7 +49,7 @@
 - Class: cmd_question
   Output: Great. You should see that we got values that are quite close to 2 and -2. Let's say that, for example, we have a dataset where we determined the mean height of 51 individuals to be 70 inches with a SE of 10. What would the UPPER value of our 95% confidence interval be? You can assume t* = 2. 
   CorrectAnswer: 70 + 2*10
-  AnswerTests: any_of_exprs('70 + 2*10', '70 + 10*2','90')
+  AnswerTests: any_of_exprs('70 + 2*10', '70 + 10*2','90', '70 + 20')
   Hint: Enter the values into the formula for a CI - statistic +/- t* * SE
 
 - Class: mult_question
