--- a/7.2-SImulation.vs.formulas/lesson.yaml
+++ b/7.2-SImulation.vs.formulas/lesson.yaml
@@ -46,7 +46,7 @@
   Hint: Enter - bootCI
 
 - Class: text
-  Output: So, using a bootstrapping simulation method, we got a 95% confidence interval of approximately (57.6, 65). We are 95% sure that the mean number of hotdogs needed to win the contest is between 57.6 and  65! Thats a lot of hot dogs!
+  Output: So, using a bootstrapping simulation method, we got a 95% confidence interval of approximately (57, 65). We are 95% sure that the mean number of hotdogs needed to win the contest is between around 57 and  65! Thats a lot of hot dogs!
 
 - Class: cmd_question
   Output: Now, let's try it again using the explicit formula for calculating a confidence interval for a mean. This can be found on your formula sheet, but here it is, sample mean +/- t* x SE, where SE = s / sqrt(n).  Note, s is the standard deviation of the data. So, to calculate this interval, we need to first calculate the SE.  Lets calculate and store this value by entering the following - formSE <- sd(~HotDogs, data=HotDogs2019)/sqrt(18) (since there are 18 cases in the dataframe).
