--- a/3.4-Do.loops/lesson.yaml
+++ b/3.4-Do.loops/lesson.yaml
@@ -8,7 +8,7 @@
 
 
 - Class: text
-  Output: You're probably wondering why the difference between sampling and resampling matters - well, you're in luck, because you will be finding out this week when you learn about bootstrapping! For now, we're going to look at a critical tool in R that will facillitate bootstrapping, the 'do' loop. 
+  Output: You're probably wondering why the difference between sampling and resampling matters - well, you're in luck, because you will be finding out this week when you learn about bootstrapping! For now, we're going to look at a critical tool in R that will facilitate bootstrapping, the 'do' loop.
   
 - Class: text
   Output: Just to illustrate the power of a do loop, imagine there is a mysterious government agent who gives you 1 cent for each time you can compute 2*2 in R. You can sit there for hours typing 2*2 over and over, but surely there is a better way...
